...
            }
        },
        snackbarHost = { SnackbarHost(hostState = snackbarHostState) },
        floatingActionButton = {
            FloatingActionButton(
                modifier = Modifier
                    .testTag("addFab")
                    .onGloballyPositioned {
                        fabPosition = it.positionInWindow()
                    },
                onClick = { showAddBottomSheet = true },
                shape = CircleShape,
                containerColor = fabColorState.value
...
                sheetState = modalSheet,
                onDismiss = { isItemAdded ->
                    showAddBottomSheet = false
                    if (isItemAdded) {
                        snackbarController.showSnackbar(
                            snackbarHostState,
                            "Password inserted successfully!"
                        )
                    }
                },
            )
        }
    }
...
    ModalBottomSheet(
        onDismissRequest = { onDismiss.invoke(false) },
        sheetState = sheetState,
        modifier = Modifier
            .wrapContentHeight()
            .fillMaxWidth()
            .testTag("addSheet")
            .imePadding(),
        containerColor = MaterialTheme.colorScheme.background
    ) {
        Box(Modifier.fillMaxWidth(), contentAlignment = Alignment.Center) {
            Column(
                verticalArrangement = Arrangement.spacedBy(12.dp),
                horizontalAlignment = Alignment.CenterHorizontally
            ) {
                InputView(
                    hintParam = "Site Name",
                    viewModel = myAddViewModel,
                    onValueChanged = { siteName = it })
                InputView(
                    hintParam = "User Name",
                    viewModel = myAddViewModel,
                    onValueChanged = { userName = it })
                PasswordInputView(
                    hintParam = "Password",
                    viewModel = myAddViewModel,
                    onValueChanged = { password = it })
...
                            siteName = siteName,
                            password = password,
                            userName = userName
                        )
                    )
                }) {
                    Text(text = "Add")
                }


                SnackbarHost(hostState = snackState, Modifier)
            }
        }
...
