...
            cursorColor = HolviTheme.colors.primaryBackground,
        ),
        singleLine = true,
        trailingIcon = {
            Box(
                modifier = Modifier
                    .testTag("generateIcon")
                    .size(24.dp)
                    .clip(CircleShape)
                    .background(
                        color = HolviTheme.colors.primaryBackground,
                        shape = CircleShape,
                    )
...
